tests/e2e/function_call_only_name4.error
Error: syntax error in story at line 4, column 1

4|    foo[0]()
      ^^^

E0101: Variable `foo` has not been defined.
